{
    "name": "InputManager",
    "maps": [
        {
            "name": "Player",
            "id": "61df2300-a18c-4a7b-b72d-0caf57f4d0cd",
            "actions": [
                {
                    "name": "Movement",
                    "type": "PassThrough",
                    "id": "e53f14fc-9a4f-4992-b2a2-670586317609",
                    "expectedControlType": "Vector2",
                    "processors": "",
                    "interactions": ""
                },
                {
                    "name": "Act",
                    "type": "Button",
                    "id": "7f62108a-06bd-4eba-a590-f86ddd06e6ab",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": ""
                },
                {
                    "name": "Dash",
                    "type": "Button",
                    "id": "63b6f97d-99ef-4ef4-b3cb-f3ef86806f07",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": ""
                },
                {
                    "name": "Turn",
                    "type": "PassThrough",
                    "id": "743c7f85-8ce1-4897-8ed8-78968e7e2dfe",
                    "expectedControlType": "Vector2",
                    "processors": "",
                    "interactions": ""
                },
                {
                    "name": "Interact",
                    "type": "Button",
                    "id": "d6061c5a-7026-45c9-8275-99d31c412c04",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": ""
                },
                {
                    "name": "Equip1",
                    "type": "Button",
                    "id": "a9f84db3-9ad9-465c-b239-f4e8c356c151",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": ""
                },
                {
                    "name": "CreateZone",
                    "type": "Button",
                    "id": "2177a3c9-40ba-480a-b10b-8a421a4487b0",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": ""
                },
                {
                    "name": "OpenStandardInventory",
                    "type": "Button",
                    "id": "d1f751fa-ca28-4bb1-95b2-063d45f4f34f",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": ""
                },
                {
                    "name": "OpenCraftingInventory",
                    "type": "Button",
                    "id": "8132db5f-a22b-43bd-886e-bda713a8f377",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": ""
                }
            ],
            "bindings": [
                {
                    "name": "wasdMovement",
                    "id": "4fa4090c-0ad5-455a-a5d8-43268b009d0d",
                    "path": "2DVector",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Movement",
                    "isComposite": true,
                    "isPartOfComposite": false
                },
                {
                    "name": "up",
                    "id": "8d787a63-fc34-4fe1-9191-20133ab8293c",
                    "path": "<Keyboard>/w",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Movement",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "down",
                    "id": "100aa094-63bf-45ad-8048-3cccff9868cf",
                    "path": "<Keyboard>/s",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Movement",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "left",
                    "id": "40a78f0d-80dc-4a05-a395-97d8692695d5",
                    "path": "<Keyboard>/a",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Movement",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "right",
                    "id": "46281eb4-cecf-4d85-b9be-e05c306bb116",
                    "path": "<Keyboard>/d",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Movement",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "",
                    "id": "103f7754-6db1-4a9d-929d-a3fd9616c182",
                    "path": "<Mouse>/leftButton",
                    "interactions": "Press",
                    "processors": "",
                    "groups": "",
                    "action": "Act",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "993df7c3-c75a-4c2f-b63d-63b784ad0e7b",
                    "path": "<Keyboard>/space",
                    "interactions": "Press",
                    "processors": "",
                    "groups": "",
                    "action": "Dash",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "b7f7dc0c-07d7-46ae-a79b-2dc85962bf65",
                    "path": "<Keyboard>/leftShift",
                    "interactions": "Press",
                    "processors": "",
                    "groups": "",
                    "action": "Dash",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "d12103c1-2482-4c3a-9cf8-d37aa28a7997",
                    "path": "<Mouse>/position",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Turn",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "98251459-2c0f-4c73-b734-76024b094016",
                    "path": "<Keyboard>/e",
                    "interactions": "Press",
                    "processors": "",
                    "groups": "",
                    "action": "Interact",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "00919164-12d5-4fc9-b8dc-b007fffbd6d8",
                    "path": "<Keyboard>/1",
                    "interactions": "Press",
                    "processors": "",
                    "groups": "",
                    "action": "Equip1",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "52735a9f-4990-4d4f-a325-05d1fedd2ccf",
                    "path": "<Keyboard>/q",
                    "interactions": "Press",
                    "processors": "",
                    "groups": "",
                    "action": "CreateZone",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "5f5a3b75-791f-4776-8bec-0661fc1b80d9",
                    "path": "<Keyboard>/tab",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "OpenStandardInventory",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "78432bb1-a896-4a2a-8134-8f380e6ef64c",
                    "path": "<Keyboard>/f",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "OpenCraftingInventory",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        },
        {
            "name": "Test",
            "id": "ac5af3aa-42d1-47cf-bdb7-d0b1565c68b5",
            "actions": [
                {
                    "name": "DepleteHealth",
                    "type": "Button",
                    "id": "6e1667c2-b814-425f-af1f-70ddaf46d437",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": ""
                },
                {
                    "name": "DepleteHunger",
                    "type": "Button",
                    "id": "261fcead-7bd7-4982-82ab-d1ce224c9bd8",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": ""
                },
                {
                    "name": "DepleteShield",
                    "type": "Button",
                    "id": "85be52da-8d4d-4860-8167-66a487294569",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": ""
                },
                {
                    "name": "IncreaseHealth",
                    "type": "Button",
                    "id": "c285dfee-8f69-41fe-b673-c1668c5467df",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": ""
                },
                {
                    "name": "MousePosition",
                    "type": "PassThrough",
                    "id": "1ec2eb31-e920-4b35-ae6d-35f9b1c5f2ea",
                    "expectedControlType": "Vector2",
                    "processors": "",
                    "interactions": ""
                },
                {
                    "name": "Hit",
                    "type": "Button",
                    "id": "5bec761b-9ee5-4e19-8746-d4a459babe21",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": ""
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "b187a752-d31f-4779-8006-77dbfaddf120",
                    "path": "<Keyboard>/j",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "DepleteHealth",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "c6393f1e-a816-4cc4-9ca8-17c4e2d90b08",
                    "path": "<Keyboard>/k",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "DepleteHunger",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "70e8ca4f-cc72-429d-8282-35a12df0c62e",
                    "path": "<Keyboard>/l",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "DepleteShield",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "ef964113-b93c-438e-9197-ec6690feb9a3",
                    "path": "<Mouse>/position",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "MousePosition",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "462cebc4-29ca-4dfe-ab76-ca9355e15a13",
                    "path": "<Keyboard>/p",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Hit",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "cbe4e39c-b3bc-4717-a34f-f4f382111085",
                    "path": "<Keyboard>/backslash",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "IncreaseHealth",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        },
        {
            "name": "StandardInventory",
            "id": "37ebf53e-ce4c-4f5a-a267-fc9afa884eac",
            "actions": [
                {
                    "name": "UseItem",
                    "type": "Button",
                    "id": "9c6a79ec-1c5e-49c7-a694-6f65dd4f5602",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": ""
                },
                {
                    "name": "DropItem",
                    "type": "Button",
                    "id": "54533ec0-2bde-4f79-beee-0324a1ae9920",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": ""
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "11206b6a-8ec4-44de-b51e-e9f0f3ab8509",
                    "path": "<Mouse>/leftButton",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "UseItem",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "d978a55a-f24d-4cdb-856c-98ed8bb996c4",
                    "path": "<Mouse>/rightButton",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "DropItem",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        },
        {
            "name": "CraftingInventory",
            "id": "fade329f-9d7a-41b2-97fa-85cc1baee0cc",
            "actions": [
                {
                    "name": "SelectItem",
                    "type": "Button",
                    "id": "2b0c03af-a30e-4cc1-8d9d-91b643d36298",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": ""
                },
                {
                    "name": "UnselectItem",
                    "type": "Button",
                    "id": "d34791e4-53b7-4806-9ec2-ec5fbf3fa7f1",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": ""
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "da2099b9-de5f-4730-a805-10403c7ee2e2",
                    "path": "<Mouse>/leftButton",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "SelectItem",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "e421fe2e-9f2d-418e-b2d1-7c84c9370155",
                    "path": "<Mouse>/rightButton",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "UnselectItem",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        }
    ],
    "controlSchemes": []
}